--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "cobe": "^0.6.4",
     "framer-motion": "^12.23.12",
     "motion": "^12.23.12",
     "react": "^19.1.1",
